lunabotics_workspace/log/build_2025-04-19_17-22-08/ctrl_to_motor/stdout_stderr.log
running egg_info
writing ../../build/ctrl_to_motor/ctrl_to_motor.egg-info/PKG-INFO
writing dependency_links to ../../build/ctrl_to_motor/ctrl_to_motor.egg-info/dependency_links.txt
writing entry points to ../../build/ctrl_to_motor/ctrl_to_motor.egg-info/entry_points.txt
writing requirements to ../../build/ctrl_to_motor/ctrl_to_motor.egg-info/requires.txt
writing top-level names to ../../build/ctrl_to_motor/ctrl_to_motor.egg-info/top_level.txt
reading manifest file '../../build/ctrl_to_motor/ctrl_to_motor.egg-info/SOURCES.txt'
writing manifest file '../../build/ctrl_to_motor/ctrl_to_motor.egg-info/SOURCES.txt'
running build
running build_py
copying ctrl_to_motor/ctrl_to_motor.py -> /home/lunabotics/lunabotics_workspace/build/ctrl_to_motor/build/lib/ctrl_to_motor
running install
running install_lib
copying /home/lunabotics/lunabotics_workspace/build/ctrl_to_motor/build/lib/ctrl_to_motor/ctrl_to_motor.py -> /home/lunabotics/lunabotics_workspace/install/ctrl_to_motor/lib/python3.10/site-packages/ctrl_to_motor
byte-compiling /home/lunabotics/lunabotics_workspace/install/ctrl_to_motor/lib/python3.10/site-packages/ctrl_to_motor/ctrl_to_motor.py to ctrl_to_motor.cpython-310.pyc
  File "/home/lunabotics/lunabotics_workspace/install/ctrl_to_motor/lib/python3.10/site-packages/ctrl_to_motor/ctrl_to_motor.py", line 23
    self.i2c.write_byte(RIGHT_TRACK_SLAVE, round(((msg.axes[3] + 1) / 2) * 255 - 128)
                       ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/lunabotics/lunabotics_workspace/install/ctrl_to_motor/lib/python3.10/site-packages/ctrl_to_motor-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/ctrl_to_motor/ctrl_to_motor.egg-info to /home/lunabotics/lunabotics_workspace/install/ctrl_to_motor/lib/python3.10/site-packages/ctrl_to_motor-0.0.0-py3.10.egg-info
running install_scripts
Installing ctrl_to_motor script to /home/lunabotics/lunabotics_workspace/install/ctrl_to_motor/lib/ctrl_to_motor
writing list of installed files to '/home/lunabotics/lunabotics_workspace/build/ctrl_to_motor/install.log'
